--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -100,3 +100,13 @@ td,tr{
     margin: 0 10%;
     border: 1px solid #dbc6bf;
 }
+.header-car{
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-right: 2%;
+}
+.delete-car0{
+    display: none;
+}
