--- a/public/css/bill.css
+++ b/public/css/bill.css
@@ -1,4 +1,24 @@
-
+b{
+    font-size: 10px;
+    font-weight: bold;
+}
+label{
+    font-size: 15px;
+    font-weight: bold;
+}
+input{
+    border: 1px solid #0000000f;
+    background-color: #ffffff54;
+    border-radius: 9%;
+    padding: 0 3%;
+    text-align: center;
+}
+textarea{
+    border: 1px solid #0000000f;
+    background-color: #ffffff54;
+    border-radius: 5px;
+    padding: 0 1%;
+}
 .header-bill{
     display: flex;
     justify-content: space-around;
@@ -10,22 +30,14 @@
     border-bottom: 1px solid #0000004f;
     padding: 1%;
 }
-b{
-    font-size: 10px;
-    font-weight: bold;
-}
-label{
-    font-size: 15px;
-    font-weight: bold;
-}
 .body-bill{
     display: flex;
     align-content: center;
     justify-content: center;
 }
 .table-body{
-    width: 85%;
-    margin: 2%;
+    width: 100%;
+    margin-top: 5%;
     align-content: center;
     border: 2px solid black;
 }
@@ -42,6 +54,7 @@ label{
 }
 .td-right{
     text-align: right !important;
+    width: 10%;
 }
 .footer-bill{
 
@@ -54,4 +67,30 @@ label{
 .table-footer td{
     padding: 2%;
     border-bottom: 2px solid black;
+}
+.unit-td{
+    text-align: center !important;
+    width: 10%;
+}
+.unit-td input{
+    width: 60px;
+    text-align: center;
+}
+.price-td{
+    width: 70px;
+}
+textarea{
+    width: 100%;
+    height: 100%;
+}
+.bill-btn{
+    display: flex;
+    flex-flow: row-reverse;
+    padding: 0 4%;
+}
+.input-td-cp{
+    width: 70px;
+}
+.input-td-city{
+    width: 170px;
 }
