--- a/public/css/bill.css
+++ b/public/css/bill.css
@@ -8,7 +8,7 @@ label{
 }
 input{
     border: 1px solid #0000000f;
-    background-color: #ffffff54;
+    background-color: #c7bbbb52;
     border-radius: 9%;
     padding: 0 3%;
     text-align: center;
@@ -18,6 +18,11 @@ textarea{
     background-color: #ffffff54;
     border-radius: 5px;
     padding: 0 1%;
+}
+#contentBill{
+    padding: 2%;
+    background: white;
+    border: 1px solid;
 }
 .header-start{
     display: flex;
@@ -35,6 +40,11 @@ textarea{
     width: 40%;
     height: 60%;
 }
+.header-logo label{
+    width: 30%;
+    font-size: 30px;
+    text-align: center;
+}
 .header-number{
     display: flex;
     flex-flow: column;
@@ -43,9 +53,6 @@ textarea{
 .header-bill{
     display: flex;
     justify-content: space-around;
-}
-.header-bill table{
-    width: 30%;
 }
 .header-bill td{
     border-bottom: 1px solid #0000004f;
@@ -83,7 +90,7 @@ textarea{
 }
 .table-footer{
     width: 95%;
-    margin: 2%;
+    margin: 0 2%;
     align-content: center;
 }
 .table-footer td{
@@ -124,6 +131,13 @@ textarea{
 }
 .input-td-city{
     width: 170px;
+}
+.footer-end{
+    display: flex;
+    justify-content: center;
+    border: 1px solid;
+    padding: 1% 3%;
+    margin: 3% 1%;
 }
 @media only screen and (max-width: 700px) {
     .header-bill {
