--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -22,9 +22,30 @@ input {
     font-family: inherit;
     border: 1px solid transparent;
 }
+.header-logo{
+    display: flex;
+}
+.header-logo img{
+    width: 50%;
+}
+.header-logo-span {
+    font-size: 7px;
+    width: 38%;
+    padding-left: 30px;
+    margin-top: -10px;
+}
+.transcaliguz {
+    width: 50%;
+    padding: 2% 0;
+}
+.transcaliguz p {
+    line-height: 3px;
+    padding: 0;
+    font-weight: bold;
+}
 .edit-load textarea{
-    margin: 2px;
-    width: 140px;
+    padding: 3%;
+    width: 200px;
     height: 100px;
 }
 
@@ -43,6 +64,14 @@ input {
     margin: 3% 0;
     font-weight: bold;
     text-decoration: underline;
+}
+.subtitle-sign {
+    padding: 0 2%;
+    font-weight: 900;
+    text-decoration: underline;
+    text-align: center;
+    color: #969687;
+    font-size: 16px;
 }
 
 /* Mark input boxes that gets an error on validation: */
@@ -119,8 +148,23 @@ td,tr{
      height: 100%;
      border-radius: 5px;
  }
+.action-div{
+    display: flex;
+    justify-content: flex-end;
+    padding: 1% 10%;
+}
+.btn-print{
+    margin: 1%;
+}
 @media print {
     .btn-not-print{
         display: none;
+    }
+    input {
+        padding: 0;
+        width: 100%;
+        font-size: 17px;
+        border: 0;
+        /*border: 1px solid #aaaaaa;*/
     }
 }
