cambios del cmr y el ver coches pendientes (se agrega migracion para saber cuando se lista un coche pendiente)

--- a/public/css/bill.css
+++ b/public/css/bill.css
@@ -19,6 +19,9 @@ textarea{
     border-radius: 5px;
     padding: 0 1%;
 }
+.content-bill{
+    margin: 0 5%;
+}
 #contentBill{
     padding: 2%;
     background: white;
