--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -1,9 +1,9 @@
 table{
     width: 100%;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 tr, td{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     font-size: 10px;
 }
 p{
@@ -160,7 +160,8 @@ label{
     padding: 3px 2%;
 }
 .info-one{
-    padding: 1% 5%;
+    /*padding: 1% 5%;*/
+    padding: 10% 0 10% 5%;
 }
 .info-two{
     padding: 0 6%;
