se comento la linea de la img cmr mientras se obtiene un cmr limpio

--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -37,7 +37,7 @@ label{
     width: 55% !important;
 }
 .container-cmr{
-    background-image: url('../images/cmr.jpg');
+    /*background-image: url('../images/cmr.jpg');*/
     background-size: cover;
     width: 21cm;
     height: 29.7cm;
