--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -190,3 +190,32 @@ td,tr{
         font-size: 12px;
     }
 }
+@media screen and (max-width: 600px) {
+    .content-wrapper{
+        background-color: white;
+        font-size: 1.2rem;
+        font-weight: 600;
+        color: #666;
+    }
+
+    .t-load-order td:nth-child(3){
+        display: none;
+    }
+
+    #regForm{
+        margin: 0;
+        padding: 0;
+        width: 95%;
+        min-width: 300px;
+    }
+
+    .title-client{
+        font-size: 12px;
+        margin: 0 0 1rem 0;
+        text-align: center;
+        font-weight: bolder;
+        text-decoration: blink;
+        display: block;
+        justify-content: space-between;
+    }
+}
