se realizaron las cambios del ver orden y listar por pais

--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -224,8 +224,11 @@ td,tr{
         display: block;
         margin: 0;
     }
+    .header-logo-m{
+        display: flex;
+    }
     .container-order-m img{
-        width: 100%;
+        width: 90%;
     }
     .content-wrapper{
         background-color: white;
