--- a/resources/views/layouts/cmr.css
+++ b/resources/views/layouts/cmr.css
@@ -1,6 +1,3 @@
-.page-content{
-    background-color: white;
-}
 @media print {
     @page{
         size: A4;
@@ -32,6 +29,9 @@ label{
     max-width: 100%;
     margin-bottom: 0;
     font-family: sans-serif;
+}
+.all-cmr{
+    background-color: white;
 }
 .btn-print{
     margin: 1%;
@@ -225,9 +225,6 @@ label{
     height: 10%;
     width: 100%;
     font-size: 10px;
-}
-.info-cars div label{
-    width: 40%;
 }
 .info-five{
     padding-left: 6cm;
