--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -25,8 +25,8 @@ p{
 }
 label{
     padding: 0 2%;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 22px;
+    line-height: 22px;
     width: 100%;
     display: inline-block;
     max-width: 100%;
@@ -45,6 +45,7 @@ label{
     width: 21cm;
     height: 29.7cm;
     background-color: white;
+    font-size: 15px;
 }
 .td-l1{
     border-left: 1px solid black;
@@ -121,8 +122,9 @@ label{
     padding: 2%;
 }
 .observation{
-    max-width: 15cm;
-    padding: 0.5cm 0.2cm;
+    max-width: 23cm;
+    padding: 0.3cm 0.2cm 0 14cm;
+    position: absolute;
 }
 .double-border td{
     border: 2px solid black;
@@ -180,13 +182,13 @@ label{
     padding: 3px 2%;
 }
 .info-one{
-    padding-left: 1.3cm;
-    padding-top: 2cm;
+    padding-left: 1.9cm;
+    padding-top: 2.2cm;
 }
 .info-two{
     display: flex;
-    padding-left: 1.3cm;
-    padding-top: 1.2cm;
+    padding-left: 1.7cm;
+    padding-top: 2cm;
 }
 .info-two label{
     max-width: 13.2cm;
@@ -196,19 +198,21 @@ label{
     border: transparent;
 }
 .matricula-camion{
-    margin: 1cm 0 0 0.5cm;
-    font-size: 14px;
+    margin: 0 0 0 19cm;
+    font-size: 23px;
     font-weight: bold;
+    position: absolute;
+    width: 14%;
 }
 .info-three{
-    padding-left: 1.3cm;
-    padding-top: 1.2cm;
+    padding-left: 1.7cm;
+    padding-top: 1.5cm;
 }
 .info-four{
     display: flex;
-    padding-left: 1.3cm;
-    padding-top: 1.15cm;
-    padding-bottom: 1.7cm;
+    padding-left: 1.7cm;
+    padding-top: 1.8cm;
+    padding-bottom: 3.4cm;
 }
 .info-four label{
     max-width: 9cm;
@@ -231,7 +235,7 @@ label{
 }
 .info-five{
     padding-left: 6cm;
-    margin-top: 3.5cm;
+    margin-top: 8cm;
 }
 .text-xs-p{
     font-size: 6px !important;
