--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -1,6 +1,3 @@
-span, label, option, div{
-    font-size: 1.5rem !important;
-}
 .page-content{
     background-color: white;
 }
@@ -44,17 +41,20 @@ input {
     width: 50%;
 }
 .header-logo-span {
-    font-size: 7px;
     width: 60%;
-    padding-left: 30px;
+    padding-left: 7px;
     margin-top: -10px;
+    line-height: 8px;
+}
+.header-logo-span span{
+    font-size: 7px !important;
 }
 .transcaliguz {
     width: 50%;
     padding: 2% 0;
 }
 .transcaliguz p {
-    line-height: 3px;
+    line-height: 7px;
     padding: 0;
     font-weight: bold;
 }
@@ -69,8 +69,8 @@ input {
     font-size: 0.8rem;
 }
 .title-client{
-    font-size: 12px;
-    margin: 2%;
+    font-size: 2.5rem;
+    margin: 4% 20%;
     text-align: center;
     font-weight: bold;
     text-decoration: underline;
@@ -240,8 +240,8 @@ td,tr{
     }
 
     .title-client{
-        font-size: 12px;
-        margin: 0 0 1rem 0;
+        font-size: 2.5rem;
+        margin: 4% 20%;
         text-align: center;
         font-weight: bolder;
         text-decoration: blink;
