tamaño del cmr A4

--- a/resources/views/layouts/cmr.css
+++ b/resources/views/layouts/cmr.css
@@ -42,7 +42,7 @@ label{
 .container-cmr{
     /*background-image: url('../images/cmr.jpg');*/
     background-size: cover;
-    width: 21cm;
+    width: 210mm;
     height: 29.7cm;
     background-color: white;
 }
