--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -32,7 +32,7 @@ label{
 .container-cmr {
     /* background-image: url(../images/cmr.jpg); */
     background-size: cover;
-    width: 75vw;
+    width: 210mm;
     height: auto;
     margin: 3%;
     background-color: white;
