--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -32,10 +32,13 @@ label{
 .container-cmr {
     /* background-image: url(../images/cmr.jpg); */
     background-size: cover;
-    width: 210mm;
+    width: 72vw;
     height: auto;
     margin: 3%;
     background-color: white;
+    display: grid;
+    align-items: flex-start;
+    grid-template: "a b";
 }
 .td-l1{
     border-left: 1px solid black;
@@ -112,9 +115,15 @@ label{
     padding: 2%;
 }
 .observation {
-    max-width: 23cm;
-    padding: 0 0 0 10cm;
-    position: absolute;
+    display: flex;
+    font-weight: bold;
+    width: 30vw;
+    grid-area: 4;
+    padding-top: 15px;
+    padding-right: 40px;
+    right: 0;
+    flex-direction: row-reverse;
+    margin-left: -30px;
 }
 .double-border td{
     border: 2px solid black;
@@ -174,34 +183,37 @@ label{
 .info-one{
     padding-left: 70px;
     padding-top: 45px;
+    grid-area: 1;
 }
 .info-two {
-    display: flex;
+    grid-area: 2;
     padding-left: 70px;
     padding-top: 15px;
-}
-.info-two label{
-    /*max-width: 13.2cm;*/
 }
 .info-two input{
     width: 60%;
     border: transparent;
 }
 .matricula-camion{
-    margin: 0 0 0 550px;
-    font-size: 23px;
+    display: flex;
     font-weight: bold;
-    position: absolute;
-    width: 14%;
+    width: 27vw;
+    grid-area: 2;
+    padding-top: 15px;
+    padding-right: 50px;
+    right: 0;
+    flex-direction: row-reverse;
 }
 .info-three{
     padding-left: 70px;
     padding-top: 30px;
+    grid-area: 3;
 }
 .info-four{
     display: flex;
     padding-left: 70px;
     padding-top: 30px;
+    grid-area: 4;
 }
 .info-four label{
     max-width: 9cm;
@@ -210,10 +222,11 @@ label{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 60%;
+    width: 100%;
     padding-left: 70px;
     height: 10cm;
     padding-top: 60px;
+    grid-area: 5;
 }
 .info-cars div{
     height: 10%;
@@ -224,9 +237,10 @@ label{
     width: 40%;
 }
 .info-five {
-    padding-left: 185px;
+    padding-left: 110px;
     margin-top: 60px;
     height: 100px;
+    grid-area: 6;
 }
 .text-xs-p{
     font-size: 6px !important;
@@ -257,4 +271,10 @@ label{
     display: flex;
     flex-flow: column;
     line-height: 10px;
+}
+@media print {
+    @page{
+        size: A4;
+        margin: 0;
+    }
 }
