--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -58,9 +58,10 @@ input {
     /* padding: 2% 0; */
 }
 .transcaliguz p {
-    line-height: 7px;
+    line-height: 6px;
     padding: 0;
-    font-weight: bold;
+    font-weight: normal;
+    font-size: 1.5rem;
 }
 .edit-load textarea{
     padding: 3%;
@@ -151,6 +152,7 @@ input.invalid {
 td,tr{
     border: 1px solid black;
     padding: 0 1%;
+    font-weight: normal !important;
 }
 .table-load-order{
     margin-top: 2%;
