--- a/public/css/clients.css
+++ b/public/css/clients.css
@@ -1,3 +1,6 @@
+form{
+    font-family: 'Sans Serif', serif !important;
+}
 .page-content{
     background-color: white;
 }
@@ -68,17 +71,21 @@ input {
     margin: 3% 0;
     height: 45px;
 }
-
+.border-create{
+    border: 2px solid #dee2e6 !important;
+    box-shadow: 0 0 7px 3px #00009969;
+}
 .input-client{
     margin-top: 1%;
     font-size: 0.8rem;
 }
 .title-client{
+    font-family: sans-serif;
     font-size: 2.5rem;
     margin: 4% 20%;
     text-align: center;
-    font-weight: bold;
-    text-decoration: underline;
+    /* font-weight: bold; */
+    /* text-decoration: underline; */
     display: flex;
     justify-content: space-between;
 }
@@ -263,4 +270,26 @@ td,tr{
 .footer-btn{
     display: flex;
     flex-flow: row-reverse;
+}
+.btn-next, .btn-prev{
+    background-color: #48e448;
+    padding: 1rem 2rem;
+    margin: 1rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: white;
+    border: 0;
+    border-radius: 10px;
+}
+.input-group-prepend > .input-group-text{
+    border: transparent;
+    background-color: transparent;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-size: 1.1rem !important;
+}
+.content-order{
+    background-color: #48e44821;
+    padding: 1rem;
+    border-radius: 10px;
 }
