--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -15,13 +15,14 @@ p{
 }
 label{
     padding: 0;
-    font-size: 22px;
-    line-height: 15px;
+    line-height: 17px;
     width: 100%;
     display: inline-block;
     max-width: 100%;
     margin-bottom: 0;
     font-family: sans-serif;
+    font-size: 8px !important;
+    font-weight: 400;
 }
 .btn-print{
     margin: 1%;
@@ -123,7 +124,7 @@ label{
     padding-right: 40px;
     right: 0;
     flex-direction: row-reverse;
-    margin-left: -30px;
+    margin-left: -200px;
 }
 .double-border td{
     border: 2px solid black;
@@ -181,14 +182,14 @@ label{
     padding: 3px 2%;
 }
 .info-one{
-    padding-left: 70px;
-    padding-top: 45px;
+    padding-left: 72px;
+    padding-top: 62px;
     grid-area: 1;
 }
 .info-two {
     grid-area: 2;
-    padding-left: 70px;
-    padding-top: 15px;
+    padding-left: 74px;
+    padding-top: 20px;
 }
 .info-two input{
     width: 60%;
@@ -238,7 +239,7 @@ label{
 }
 .info-five {
     padding-left: 110px;
-    margin-top: 60px;
+    margin-top: 50px;
     height: 100px;
     grid-area: 6;
 }
