--- a/public/css/cmr.css
+++ b/public/css/cmr.css
@@ -1,5 +1,19 @@
+label, span{
+    font-size: 15px !important;
+    font-weight: normal !important;
+}
 .page-content{
     background-color: white;
+}
+@media print {
+    @page{
+        size: A4;
+        margin: 0;
+    }
+}
+@page{
+    size: A4;
+    margin: 0;
 }
 table{
     width: 100%;
@@ -14,15 +28,14 @@ p{
     line-height: 3px;
 }
 label{
-    padding: 0;
-    line-height: 17px;
+    padding: 0 2%;
+    font-size: 15px;
+    line-height: 18px;
     width: 100%;
     display: inline-block;
     max-width: 100%;
     margin-bottom: 0;
     font-family: sans-serif;
-    font-size: 8px !important;
-    font-weight: 400;
 }
 .btn-print{
     margin: 1%;
@@ -30,16 +43,13 @@ label{
 .td-start{
     width: 55% !important;
 }
-.container-cmr {
-    /* background-image: url(../images/cmr.jpg); */
+.container-cmr{
+    /*background-image: url('../images/cmr.jpg');*/
     background-size: cover;
-    width: 72vw;
-    height: auto;
-    margin: 3%;
+    width: 21cm;
+    height: 29.7cm;
     background-color: white;
-    display: grid;
-    align-items: flex-start;
-    grid-template: "a b";
+    font-size: 15px;
 }
 .td-l1{
     border-left: 1px solid black;
@@ -115,16 +125,12 @@ label{
     width: 170px;
     padding: 2%;
 }
-.observation {
-    display: flex;
-    font-weight: bold;
-    width: 30vw;
-    grid-area: 4;
-    padding-top: 15px;
-    padding-right: 40px;
-    right: 0;
-    flex-direction: row-reverse;
-    margin-left: -200px;
+.observation{
+    /*max-width: 30cm;*/
+    margin-left: 4cm !important;
+    margin-top: -3cm;
+    padding: 0.3cm 0.2cm 0 14cm;
+    /*position: absolute;*/
 }
 .double-border td{
     border: 2px solid black;
@@ -182,52 +188,49 @@ label{
     padding: 3px 2%;
 }
 .info-one{
-    padding-left: 72px;
-    padding-top: 62px;
-    grid-area: 1;
+    padding-left: 2.5cm;
+    padding-top: 3.5cm;
 }
-.info-two {
-    grid-area: 2;
-    padding-left: 74px;
-    padding-top: 20px;
+.info-two{
+    display: flex;
+    padding-left: 3.2cm;
+    padding-top: 2cm;
+}
+.info-two label{
+    max-width: 13.2cm;
 }
 .info-two input{
     width: 60%;
     border: transparent;
 }
 .matricula-camion{
-    display: flex;
     font-weight: bold;
-    width: 27vw;
-    grid-area: 2;
-    padding-top: 15px;
-    padding-right: 50px;
-    right: 0;
+    width: 18cm;
+    position: absolute;
+    display: flex;
     flex-direction: row-reverse;
+    top: 16cm;
 }
 .info-three{
-    padding-left: 70px;
-    padding-top: 30px;
-    grid-area: 3;
+    padding-left: 2.6cm;
+    padding-top: 1cm;
 }
 .info-four{
     display: flex;
-    padding-left: 70px;
-    padding-top: 30px;
-    grid-area: 4;
+    padding-left: 3.4cm;
+    padding-top: 2.5cm;
+    padding-bottom: 1.8cm;
 }
 .info-four label{
-    max-width: 9cm;
+    max-width: 12cm;
 }
-.info-cars {
+.info-cars{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 100%;
-    padding-left: 70px;
+    width: 60%;
+    padding-left: 2.6cm;
     height: 10cm;
-    padding-top: 60px;
-    grid-area: 5;
 }
 .info-cars div{
     height: 10%;
@@ -237,11 +240,9 @@ label{
 .info-cars div label{
     width: 40%;
 }
-.info-five {
-    padding-left: 110px;
-    margin-top: 50px;
-    height: 100px;
-    grid-area: 6;
+.info-five{
+    padding-left: 2.8cm;
+    margin-top: 10.4cm;
 }
 .text-xs-p{
     font-size: 6px !important;
@@ -272,10 +273,4 @@ label{
     display: flex;
     flex-flow: column;
     line-height: 10px;
-}
-@media print {
-    @page{
-        size: A4;
-        margin: 0;
-    }
 }
