--- a/public/css/print_cmr.css
+++ b/public/css/print_cmr.css
@@ -205,11 +205,11 @@ label{
 }
 .matricula-camion{
     font-weight: bold;
-    width: 19cm;
+    width: 25cm;
     position: absolute;
     display: flex;
     flex-direction: row-reverse;
-    top: 7cm;
+    top: 6cm;
 }
 .info-three{
     padding-left: 2.6cm;
@@ -229,8 +229,9 @@ label{
     flex-wrap: wrap;
     flex-direction: column;
     width: 60%;
-    padding-left: 2.6cm;
+    padding-left: 3.2cm;
     height: 10cm;
+    padding-top: 3cm;
 }
 .info-cars div{
     height: 10%;
@@ -242,7 +243,7 @@ label{
 }
 .info-five{
     padding-left: 2.8cm;
-    margin-top: 10.4cm;
+    margin-top: 11.5cm;
 }
 .text-xs-p{
     font-size: 6px !important;
